--- a/vanilla/src/stylesheets/style.css
+++ b/vanilla/src/stylesheets/style.css
@@ -7,6 +7,7 @@ html,
 body,
 div,
 span,
+main,
 applet,
 object,
 iframe,
@@ -132,4 +133,9 @@ table {
 html,
 body {
   height: 100%;
+
+  /* remove space at the top */
+  position: absolute;
+  width: 100%;
+  margin: 0 auto;
 }
