--- a/vanilla/src/stylesheets/style.css
+++ b/vanilla/src/stylesheets/style.css
@@ -133,9 +133,19 @@ table {
 html,
 body {
   height: 100%;
+  background-color: #f2f2f2;
 
   /* remove space at the top */
   position: absolute;
   width: 100%;
   margin: 0 auto;
+}
+
+.clearfix::before,
+.clearfix::after {
+  content: "";
+  display: table;
+}
+.clearfix::after {
+  clear: both;
 }
