--- a/vanilla/src/stylesheets/header.css
+++ b/vanilla/src/stylesheets/header.css
@@ -2,6 +2,8 @@
   Header
 */
 header {
+  display: flex;
+  justify-content: space-between;
   background-color: #f2cb05;
   padding: 0.5em 1em;
 }
@@ -23,7 +25,7 @@ header {
   font: normal 600 24px/24px monospace;
   color: #fff;
   padding: 0;
-  margin-right: 1em;
+  /* margin-right: 1em; */
 }
 
 /*
