--- a/vanilla/src/stylesheets/todolist.css
+++ b/vanilla/src/stylesheets/todolist.css
@@ -18,7 +18,7 @@ li:last-of-type {
 }
 
 /* inputs */
-input {
+.task-input {
   font: 200 1.5em/2em "Sans", serif;
   border: none;
   outline: none;
