--- a/intro/src/components/Card.astro
+++ b/intro/src/components/Card.astro
@@ -1,22 +1,19 @@
 ---
 export interface Props {
 	title: string;
-	body: string;
 	href: string;
+	imgSrc: string;
 }
 
-const { href, title, body } = Astro.props;
+const { href, title, imgSrc } = Astro.props;
 ---
 
 <li class="link-card">
 	<a href={href}>
+		<img src={imgSrc} />
 		<h2>
 			{title}
-			<span>&rarr;</span>
 		</h2>
-		<p>
-			{body}
-		</p>
 	</a>
 </li>
 <style>
@@ -30,7 +27,8 @@ const { href, title, body } = Astro.props;
 		border-radius: 0.5rem;
 		background-position: 100%;
 		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
+		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+			0 2px 4px -2px rgba(0, 0, 0, 0.1);
 	}
 
 	.link-card > a {
