--- a/intro/src/layouts/Layout.astro
+++ b/intro/src/layouts/Layout.astro
@@ -21,8 +21,14 @@ const { title } = Astro.props;
 </html>
 <style is:global>
 	:root {
-		--accent: 124, 58, 237;
-		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
+		/* --accent: 124, 58, 237; */
+		--accent: 242, 203, 5;
+		--accent-gradient: linear-gradient(
+			45deg,
+			rgb(var(--accent)),
+			#de2883 30%,
+			white 60%
+		);
 	}
 	html {
 		font-family: system-ui, sans-serif;
