--- a/intro/src/layouts/Layout.astro
+++ b/intro/src/layouts/Layout.astro
@@ -20,6 +20,9 @@ const { title } = Astro.props;
 	</body>
 </html>
 <style is:global>
+	* {
+		box-sizing: border-box;
+	}
 	:root {
 		/* --accent: 124, 58, 237; */
 		--accent: 242, 203, 5;
@@ -31,8 +34,13 @@ const { title } = Astro.props;
 		);
 	}
 	html {
+		height: 100vh;
 		font-family: system-ui, sans-serif;
-		background-color: #F6F6F6;
+		background-color: #f6f6f6;
+	}
+	body {
+		height: 100%;
+		margin: 0;
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
