--- a/intro/src/layouts/Layout.astro
+++ b/intro/src/layouts/Layout.astro
@@ -43,7 +43,7 @@ const { title } = Astro.props;
 		margin: 0;
 	}
 	code {
-		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+		font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
+			DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
 	}
 </style>
