feat(intro): intro

--- a/intro/src/pages/index.astro
+++ b/intro/src/pages/index.astro
@@ -1,35 +1,28 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
+import Layout from "../layouts/Layout.astro";
+import Card from "../components/Card.astro";
 ---
 
 <Layout title="Welcome to Astro.">
 	<main>
-		<h1>Welcome to <span class="text-gradient">Astro</span></h1>
+		<h1>
+			Hi. Welcome to the <span class="text-gradient">ToDo app.</span>
+		</h1>
 		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
+			I created this app with different frameworks, trying to make it as
+			similar as possible.<br />
+			Feel free to check them out.
 		</p>
 		<ul role="list" class="link-card-grid">
 			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
+				href="https://vanilla-todo.newbier.xyz"
+				imgSrc="https://img.icons8.com/color/48/null/javascript--v1.png"
+				title="Vanilla JS"
 			/>
 			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
-			/>
-			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
-			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
+				href="https://vue-todo.newbier.xyz"
+				imgSrc="https://img.icons8.com/color/48/null/vue-js.png"
+				title="Vue.js"
 			/>
 		</ul>
 	</main>
@@ -40,6 +33,10 @@ import Card from '../components/Card.astro';
 		margin: auto;
 		padding: 1.5rem;
 		max-width: 60ch;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		height: 100%;
 	}
 	h1 {
 		font-size: 3rem;
