feat(intro): title

--- a/intro/src/pages/index.astro
+++ b/intro/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import Card from "../components/Card.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="Todo App">
 	<main>
 		<h1>
 			Hi. Welcome to the <span class="text-gradient">ToDo app.</span>
