feat(intro): change description

--- a/intro/src/pages/index.astro
+++ b/intro/src/pages/index.astro
@@ -9,8 +9,8 @@ import Card from "../components/Card.astro";
 			Hi. Welcome to the <span class="text-gradient">ToDo app.</span>
 		</h1>
 		<p class="instructions">
-			I created this app with different frameworks, trying to make them as
-			similar as possible.<br />
+			I built the identical versions of this app multiple times with
+			different frameworks.<br />
 			Check them out!
 		</p>
 		<ul role="list" class="link-card-grid">
